<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/recipes_menu_label" />
    </group>

    <item android:title="@string/about_this_app_label">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about_menu_label" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_menu_label" />
        </menu>
    </item>

</menu>
