<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/appwidget_frame_relative_layout"
    android:background="@color/colorPrimary"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/android_baking_app_label"
            android:text="@string/android_baking_app_label"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/appwidget_recipe_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/android_baking_app_label"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/appwidget_ingredients_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:text="@string/all_ingredients_info"/>

    </LinearLayout>

</RelativeLayout>